alteração de salvamento no localstorage

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </style>
 
     <div class="container">
-        <header
+        <header>
             <h1>Lista de tarefas</h1>
         </header>
         
@@ -35,6 +35,6 @@
         
     </div>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-    <script src="./main.js"></script>
+    <script src="./main1.js"></script>
 </body>
 </html>
